--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-bootstrap-starter",
   "version": "0.5.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
