--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "fs": "^0.0.1-security",
