--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.6",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.8.4",
