--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
+    "framer-motion": "^12.23.9",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.1",
     "https": "^1.0.0",
