--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-multi-carousel": "^2.8.4",
     "react-multi-date-picker": "^4.4.1",
     "react-router-bootstrap": "^0.25.0",
